first working version !

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -94,11 +94,11 @@
           ],
           "type": "sass"
         },
-        "f7df8d16": {
-          "id": "f7df8d16",
-          "path": "assets/js/slider.js",
-          "output": "assets/js/slider-dist.js",
-          "name": "slider.js",
+        "7cd18d6f": {
+          "id": "7cd18d6f",
+          "path": "assets/js/display.js",
+          "output": "assets/js/display-dist.js",
+          "name": "display.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
