--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,7 @@
   "fileConfigs": [
     {
       "path": "scss/main.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-sass\":{\"path\":\"scss/main.scss\",\"libSass\":true,\"compass\":true,\"fullCompass\":true,\"outputStyle\":\"expanded\"}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"compact\",\"lineNumbers\":false},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"compiler-sass\":{\"path\":\"scss/main.scss\",\"libSass\":true,\"compass\":true,\"fullCompass\":true,\"outputStyle\":\"expanded\"}}"
     },
     {
       "path": "scss/_variables.scss",
@@ -22,11 +22,41 @@
     {
       "path": "assets/js/display.js",
       "configJson": "{\"compiler-javascript\":{\"path\":\"assets/js/display.js\",\"mangle\":true},\"autoCompile\":false,\"compiler-uglify-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"sourceMap\":false,\"customOutput\":\"assets/js/display-dist.js\"}"
+    },
+    {
+      "path": "assets/img/largeBackground.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":436999,\"newSize\":436999}}"
+    },
+    {
+      "path": "assets/img/mediumBackground.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":277480,\"newSize\":277480}}"
+    },
+    {
+      "path": "assets/img/personn.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":7908,\"newSize\":9189}}"
+    },
+    {
+      "path": "assets/img/news.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":156915,\"newSize\":161510}}"
+    },
+    {
+      "path": "assets/img/logo.png",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":2293,\"newSize\":2039}}"
+    },
+    {
+      "path": "assets/img/smallBackground.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":279447,\"newSize\":279447}}"
+    },
+    {
+      "path": "assets/img/wideBackground.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":459141,\"newSize\":459141}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
-      "scss"
+      "scss",
+      "assets",
+      "assets/img"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -43,13 +73,6 @@
   "imports": [
     {
       "path": "scss/main.scss",
-      "imports": [
-        "scss/_variables.scss",
-        "scss/_navbar.scss"
-      ]
-    },
-    {
-      "path": "scss/maintest.scss",
       "imports": [
         "scss/_variables.scss",
         "scss/_navbar.scss"
@@ -118,7 +141,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7880,
+    "port": 7881,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
@@ -186,7 +209,7 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"compilers\":[\"ruby-sass\",\"autoprefixer\",\"minify-css\"],\"output\":{\"replaceSegments\":[\"less\",\"sass\",\"stylus\",\"scss\",\"styl\"],\"replaceSegmentsWith\":\"assets/style\"},\"compiler-sass\":{\"libSass\":true,\"compass\":true,\"fullCompass\":true,\"outputStyle\":\"expanded\"},\"outputSuffix\":null}",
+  "file-type-sass": "{\"compilers\":[\"ruby-sass\",\"autoprefixer\",\"minify-css\"],\"output\":{\"replaceSegments\":[\"less\",\"sass\",\"stylus\",\"scss\",\"styl\"],\"replaceSegmentsWith\":\"assets/style\"},\"compiler-ruby-sass\":{\"outputStyle\":\"compact\"},\"compiler-minify-css\":{\"enabled\":true},\"compiler-sass\":{\"libSass\":true,\"compass\":true,\"fullCompass\":true,\"outputStyle\":\"expanded\"},\"outputSuffix\":null}",
   "file-type-less": "{\"autoCompile\":true,\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"sourceMap\":false,\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"less\",\"sass\",\"stylus\",\"scss\",\"styl\"],\"replaceSegmentsWith\":[\"css\"],\"relative\":\"\"},\"compiler-less\":{\"enabled\":true}}",
   "autoprefixer": {
     "browsers": "last 4 versions"
