--- a/prepros-6.config
+++ b/prepros-6.config
@@ -50,6 +50,26 @@
     {
       "path": "assets/img/wideBackground.jpg",
       "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":459141,\"newSize\":459141}}"
+    },
+    {
+      "path": "assets/img/salle_ascenseur.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":30227,\"newSize\":23024}}"
+    },
+    {
+      "path": "assets/img/salle_travail.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":25508,\"newSize\":18305}}"
+    },
+    {
+      "path": "assets\\img\\salle_réunion.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":50458,\"newSize\":43255}}"
+    },
+    {
+      "path": "assets/img/salle_bureau.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":30240,\"newSize\":23037}}"
+    },
+    {
+      "path": "assets/img/salle_repos.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":31509,\"newSize\":24306}}"
     }
   ],
   "fileTree": {
@@ -225,6 +245,7 @@
   "file-type-livescript": "{\"autoCompile\":true,\"compiler-livescript\":{\"bare\":false,\"mangle\":true,\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":false,\"mangle\":true},\"compilers\":[\"livescript\",\"uglify-js\"],\"sourceMap\":false,\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"coffee\",\"coffeescript\",\"coffeescripts\",\"ls\",\"livescript\",\"livescripts\"],\"replaceSegmentsWith\":[\"html\"],\"relative\":\"\"}}",
   "file-type-kit": "{\"autoCompile\":true,\"compiler-kit\":{\"minifyHtml\":false,\"enabled\":true},\"compilers\":[\"kit\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"jade\",\"haml\",\"slim\",\"markdown\",\"md\",\"kit\"],\"replaceSegmentsWith\":[\"html\"],\"relative\":\"\"}}",
   "uglify-js": {
+    "ie8": false,
     "compress": {
       "sequences": true,
       "properties": true,
@@ -232,40 +253,54 @@
       "drop_debugger": true,
       "unsafe": false,
       "unsafe_comps": false,
+      "unsafe_math": false,
+      "unsafe_proto": false,
+      "unsafe_regexp": false,
       "conditionals": true,
       "comparisons": true,
       "evaluate": true,
       "booleans": true,
       "loops": true,
       "unused": true,
+      "toplevel": false,
+      "top_retain": "",
       "hoist_funs": true,
-      "keep_fargs": false,
       "hoist_vars": false,
       "if_return": true,
       "join_vars": true,
       "cascade": true,
-      "side_effects": true,
-      "pure_getters": false,
-      "negate_iife": true,
-      "screw_ie8": false,
-      "drop_console": false,
-      "angular": false,
+      "collapse_vars": true,
+      "reduce_vars": true,
       "warnings": true,
+      "negate_iife": true,
+      "pure_getters": false,
       "pure_funcs": [],
+      "drop_console": false,
+      "expression": false,
+      "keep_fargs": false,
+      "keep_fnames": false,
+      "passes": 1,
+      "keep_infinity": false,
+      "side_effects": true,
       "global_defs": []
     },
     "output": {
-      "quote_keys": false,
-      "space_colon": true,
       "ascii_only": false,
-      "unescape_regexps": false,
-      "inline_script": false,
       "beautify": false,
       "bracketize": false,
-      "semicolons": true,
-      "comments": false,
+      "comments": "",
+      "indent_level": 4,
+      "indent_start": 0,
+      "inline_script": false,
+      "keep_quoted_props": false,
+      "max_line_len": false,
+      "preamble": "",
       "preserve_line": false,
-      "screw_ie8": false
+      "quote_keys": false,
+      "quote_style": 0,
+      "semicolons": true,
+      "shebang": true,
+      "width": 80
     }
   },
   "cssnext": {
